# greengrass-v2-docker-ros-demo

./: Dockerfile  README.md  app_entrypoint.sh  docker-compose.yaml
greengrass/: greengrass_bootstrap.template.yaml  sample-deployment.json  sample-robot.policy.json
greengrass/com.example.ros2.demo/1.0.0/recipes/: recipe.yaml
workspace/src/greengrass-bridge/: package.xml  setup.cfg  setup.py
workspace/src/greengrass-bridge/greengrass_bridge/: app.py
workspace/src/greengrass-bridge/launch/: greengrass_bridge.launch.py
