<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>greengrass_bridge</name>
  <version>0.14.0</version>
  <description>
     Running simple command line operations to capture stats. 
  </description>
  
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>

  <license>MIT-0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
    
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
